[b]Version 0.5.62[/b] (not released yet):

(2007-11-03)
 * Adapted the code for patch select_sub_by_source_property2.diff.

(2007-11-02)
 * Added the Greek translation sent by my80s <wamy80s@gmail.com>.

(2007-11-01)
 * Fixed a bug which prevented to select the first (or preferred) subtitle
   when playing a new video.
 * Now mplayerprocess can identify the mplayer version (or svn revision).
 * Added autodetection possibility for changing the font size of subtitles.
   Now the values for the config option "change_sub_scale_requires_restart"
   are different: -1 means autodetect, 0 = false, 1 = true (by default -1).
   Autodetect will check the mplayer version to know if it's recent enough
   to have the slave command "sub_scale". But autodetect can fail with very
   old versions of mplayer (< 1.0rc1).
 * Renamed "change_sub_scale_requires_restart" to 
   "change_sub_scale_should_restart" to force everyone to use the new default
   value.
 * Added autodetection possibility for changing audio track.
 * The config option "audio_change_requires_restart" has been renamed to
   "audio_change_should_restart". It also accepts three values (-1, 0 and 1)
   being -1 autodetection. The default option is -1, which means that 
   the mplayer version will be checked to know if changing audio track 
   needs to restart the mplayer process or not.
 * The option "Fast audio track switching" in Preferences->Advanced has been
   disabled until a new one (a combobox) which supports the 3 values is added.

(2007-10-31)
 * Added code to test the slave command "select_sub" (see 
   http://lists.mplayerhq.hu/pipermail/mplayer-dev-eng/2007-October/054651.html)
   The code is disabled by default. To activate it set USE_SELECT_SUB to 1 in
   config.h.

(2007-10-30)
 * Changed the layout of some sections in preferences to make them smaller.

(2007-10-29)
 * (Experimental) Enable or disable some actions according to the current state.